bugfix java.lang.verifyerror
fixed by removing the files from the Lox directory and adding them to a Core folder directly from VSCode.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,13 @@
             "type": "java",
             "name": "Launch Lox",
             "request": "launch",
+            "mainClass": "Core.Lox",
+            "projectName": "Lox-Java-Interpreter_5686528d"
+        },
+        {
+            "type": "java",
+            "name": "Launch Lox",
+            "request": "launch",
             "mainClass": "Lox.Lox",
             "projectName": "Lox-Java-Interpreter_5686528d"
         },
